force-app/main/default/objects/NI_Project_Backlog__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <businessOwnerUser>dmerrill@newmarketinc.com</businessOwnerUser>
    <description>NICC-029509. Updated per NICC-029811.
Updated per NICC 043841
Updated per NICC 043999</description>
    <inlineHelpText>The current phase of the project based on completed and outstanding tasks.</inlineHelpText>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal - Inclusive of approval if applicable</fullName>
            </value>
            <value>
                <fullName>Evaluate current state</fullName>
            </value>
            <value>
                <fullName>Creating future state</fullName>
            </value>
            <value>
                <fullName>Initial Discovery</fullName>
            </value>
            <value>
                <fullName>Requirements Gathering</fullName>
            </value>
            <value>
                <fullName>Solution Design</fullName>
            </value>
            <value>
                <fullName>Tech Design</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Development Validation</fullName>
            </value>
            <value>
                <fullName>SBFULL Deployment</fullName>
            </value>
            <value>
                <fullName>SBFULL Business Systems Validation</fullName>
            </value>
            <value>
                <fullName>SBFULL Stakeholder Validation</fullName>
            </value>
            <value>
                <fullName>QA Development</fullName>
            </value>
            <value>
                <fullName>QA Validation</fullName>
            </value>
            <value>
                <fullName>UAT Deployment</fullName>
            </value>
            <value>
                <fullName>UAT Validation</fullName>
            </value>
            <value>
                <fullName>Production Deployment</fullName>
            </value>
            <value>
                <fullName>Production Validation</fullName>
            </value>
            <value>
                <fullName>Documentation_Training</fullName>
                <label>Documentation/Training</label>
            </value>
            <value>
                <fullName>Project Closure</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Stakeholder acceptance</fullName>
            </value>
            <value>
                <fullName>Measuring Impact</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <isActive>false</isActive>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>Code Review</fullName>
                <isActive>false</isActive>
                <label>Code Review</label>
            </value>
            <value>
                <fullName>Deferred</fullName>
                <isActive>false</isActive>
                <label>Deferred</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>QA Deployment</fullName>
                <isActive>false</isActive>
                <label>QA Deployment</label>
            </value>
            <value>
                <fullName>Validation</fullName>
                <isActive>false</isActive>
                <label>Validation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>