force-app/main/default/objects/NI_Project_Backlog__c/fields/Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites__c</fullName>
    <description>NICC-028375. Applies to Business Systems record type.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Items that need to be completed prior to deployment or completion of the project.</inlineHelpText>
    <label>Prerequisites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>