force-app/main/default/objects/NI_Project_Backlog__c/fields/Prioritization_Score__c.field-meta.xml
<CustomField>
    <fullName>Prioritization_Score__c</fullName>
    <formula>Urgency_Score__c + Stakeholder_Score__c + Legal_Score__c + Savings_Score__c + Requirement_Score__c + LOE_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority - DEPRICATED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>