force-app/main/default/objects/NI_Project_Backlog__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>NICC-028375. Applies to Business Systems record type.</description>
    <inlineHelpText>Manual numeric priority value for the project.</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>