force-app/main/default/objects/NI_Project_Backlog__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>Used for Development Requests</description>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>Curriculum Development</fullName>
            </value>
            <value>
                <fullName>Delphi</fullName>
            </value>
            <value>
                <fullName>Guest Centric</fullName>
            </value>
            <value>
                <fullName>HIS</fullName>
            </value>
            <value>
                <fullName>HRM</fullName>
            </value>
            <value>
                <fullName>HSP</fullName>
            </value>
            <value>
                <fullName>iPlan</fullName>
            </value>
            <value>
                <fullName>MeetingBroker</fullName>
            </value>
            <value>
                <fullName>NWS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>