force-app/main/default/objects/NI_Project_Backlog__c/fields/Project_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Completion_Date__c</fullName>
    <description>Date the &quot;Project Status&quot; was set to &quot;Deployed&quot;
UPDATED 05/27/2020 PER NICC-043352</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date work was completed or estimated date of completion (future only)</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>