force-app/main/default/objects/NI_Project_Backlog__c/fields/Project_Details__c.field-meta.xml
<CustomField>
    <fullName>Project_Details__c</fullName>
    <description>UPDATED 05/27/2020 PER NICC-043352</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Problem Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>