force-app/main/default/objects/NI_Project_Backlog__c/fields/Project_Level_LOE__c.field-meta.xml
<CustomField>
    <fullName>Project_Level_LOE__c</fullName>
    <inlineHelpText>Very high level (low confidence) estimate provided without doing any task level analysis.</inlineHelpText>
    <label>Project-Level LOE (hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>