force-app/main/default/objects/NI_Project_Backlog__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <description>The group/team within IT that this project is assigned to</description>
    <inlineHelpText>The group/team within IT that this project is assigned to</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Systems</fullName>
                <label>Corporate Business Systems</label>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Help Desk</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>SFDC System Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>