force-app/main/default/objects/NI_Project_Backlog__c/fields/QA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Start_Date__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-048128
The date the QA phase started</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the QA phase started</inlineHelpText>
    <label>QA Start Date</label>
    <type>Date</type>
</CustomField>