force-app/main/default/objects/NI_Project_Backlog__c/fields/Realized_Efficiencies_Cost_Saved__c.field-meta.xml
<CustomField>
    <fullName>Realized_Efficiencies_Cost_Saved__c</fullName>
    <businessOwnerUser>dmerrill@newmarketinc.com</businessOwnerUser>
    <description>NICC-054810</description>
    <inlineHelpText>Sum of the Efficiencies Cost Saved field from all related Realized Benefits records</inlineHelpText>
    <label>Realized Efficiencies Cost Saved</label>
    <summarizedField>AH_Realized_Project_Benefits__c.Efficiencies_Cost_Saved__c</summarizedField>
    <summaryForeignKey>AH_Realized_Project_Benefits__c.Project_Backlog_Record__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>