force-app/main/default/objects/NI_Project_Backlog__c/fields/Realized_Revenue_Increase__c.field-meta.xml
<CustomField>
    <fullName>Realized_Revenue_Increase__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-047197</description>
    <inlineHelpText>Sum of revenue increase amount field from the related Realized Benefits records</inlineHelpText>
    <label>Realized Revenue Increase</label>
    <summarizedField>AH_Realized_Project_Benefits__c.Revenue_Increase_Amount__c</summarizedField>
    <summaryForeignKey>AH_Realized_Project_Benefits__c.Project_Backlog_Record__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>