force-app/main/default/objects/NI_Project_Backlog__c/fields/Related_Integration__c.field-meta.xml
<CustomField>
    <fullName>Related_Integration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select related integration.</description>
    <inlineHelpText>Select related integration.</inlineHelpText>
    <label>Related Integration</label>
    <referenceTo>NI_Integration__c</referenceTo>
    <relationshipName>NI_Project_Backlog</relationshipName>
    <type>Lookup</type>
</CustomField>