force-app/main/default/objects/NI_Project_Backlog__c/fields/Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Hours__c</fullName>
    <formula>Remaining_LOE__c +  Child_Project_Remaining_LOE_hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remaining Hours For Project</inlineHelpText>
    <label>Remaining Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>