force-app/main/default/objects/NI_Project_Backlog__c/fields/Remaining_LOE__c.field-meta.xml
<CustomField>
    <fullName>Remaining_LOE__c</fullName>
    <label>Remaining LOE (Project)</label>
    <summarizedField>NI_Project_Backlog_Tasks__c.Hours_Remaining__c</summarizedField>
    <summaryForeignKey>NI_Project_Backlog_Tasks__c.NI_Project_Backlog_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>