force-app/main/default/objects/NI_Project_Backlog__c/fields/Required_for_Security_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Required_for_Security_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-044048
This project is addresses an Amadeus security and compliance requirement</description>
    <inlineHelpText>This project is addresses an Amadeus security and compliance requirement</inlineHelpText>
    <label>Required for Security Compliance</label>
    <type>Checkbox</type>
</CustomField>