force-app/main/default/objects/NI_Project_Backlog__c/fields/Requirements_Definition__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Definition__c</fullName>
    <label>Requirements Definition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Concept Only</fullName>
                <default>true</default>
                <label>Concept Only</label>
            </value>
            <value>
                <fullName>Partially Defined</fullName>
            </value>
            <value>
                <fullName>Fully Defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>