force-app/main/default/objects/NI_Project_Backlog__c/fields/Requirements_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Due_Date__c</fullName>
    <businessOwnerGroup>Business_Systems_Internal</businessOwnerGroup>
    <description>NICC-044048
This is the date the BRD needs to be fully approved in order for CBS to secure dates. 
help text update; NICC 051223</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the date the BRD needs to be fully approved in order for CBS to secure dates.</inlineHelpText>
    <label>Requirements Due Date</label>
    <type>Date</type>
</CustomField>