force-app/main/default/objects/NI_Project_Backlog__c/fields/Requirements_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Received_Date__c</fullName>
    <businessOwnerGroup>Business_Systems_Internal</businessOwnerGroup>
    <description>NICC-044048
This is the date the BRD has been completed and submitted for approval.
help text update; NICC 051223</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the date the BRD has been completed and submitted for approval.</inlineHelpText>
    <label>Requirements Received Date</label>
    <type>Date</type>
</CustomField>