force-app/main/default/objects/NI_Project_Backlog__c/fields/Requires_Compliance_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Compliance_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-028375. Applies to Business Systems record type.</description>
    <inlineHelpText>Indicates that the project will need to be reviewed by Security &amp; Compliance.</inlineHelpText>
    <label>Requires Compliance Review</label>
    <type>Checkbox</type>
</CustomField>