force-app/main/default/objects/NI_Project_Backlog__c/fields/Rev_Amt_Blk_Year__c.field-meta.xml
<CustomField>
    <fullName>Rev_Amt_Blk_Year__c</fullName>
    <description>(If Applicable) Revenue blocked in year without this functionality</description>
    <inlineHelpText>(If Applicable) Revenue blocked in year without this functionality</inlineHelpText>
    <label>Revenue Amount Blocked in Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>