force-app/main/default/objects/NI_Project_Backlog__c/fields/RIC_How_did_you_arrive_at_this_number__c.field-meta.xml
<CustomField>
    <fullName>RIC_How_did_you_arrive_at_this_number__c</fullName>
    <description>NICC-053541</description>
    <encryptionScheme>None</encryptionScheme>
    <label>How did you arrive at this number?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>