force-app/main/default/objects/NI_Project_Backlog__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <description>Calculation is based on the Actual LOE expended on the project.  If the project has not yet been completed, then the Estimated LOE will be used in the calculation instead.

NOTE:  NEED TO INSERT ACTUAL LOE ROLL UP SUMMARY AFTER THE FIELD HAS BEEN CREATED</description>
    <formula>/****************************UPDATED PER NICC-016642 **************************/
/*** If there are no annual savings, then there is no return on investment duration (set to 9999) ***/
/*** If the project is &quot;Complete&quot;, determine the ROI Duration using the Total Actual Hours ***/
/*** If the project is not yet complete, populate the field with an estimated ROI Duration using the Estimated Hours ***/
IF( ISPICKVAL(Request_Status__c,&quot;Completed&quot;) &amp;&amp; Annual_Savings__c=0,
9999,
IF( ISPICKVAL(Request_Status__c,&quot;Completed&quot;) &amp;&amp; Total_Actual_Hours__c!= 0,
12/(Annual_Savings__c/(50*Total_Actual_Hours__c)),
IF( NOT(ISPICKVAL(Request_Status__c,&quot;Completed&quot;)) &amp;&amp; Project_Level_LOE__c !=0,
12/(Annual_Savings__c/(50*Project_Level_LOE__c)),
0
)
)
)

/**ORIGINAL CODE********************************************
IF(ISPICKVAL(Request_Status__c,&quot;Completed&quot;), 
  12 / ( Annual_Savings__c / (50 *  Actual_Hours__c )),
  12 / ( Annual_Savings__c / (50 * Project_Level_LOE__c ))
)
***********************************************************/

/**
IF(ISPICKVAL(Request_Status__c,&quot;Completed&quot;) &amp;&amp; Annual_Savings__c !=0 &amp;&amp; Actual_Hours__c != 0, 
  12 / ( Annual_Savings__c / (50 *  Actual_Hours__c )),
IF(ISPICKVAL(Request_Status__c,&quot;Completed&quot;) &amp;&amp; (Annual_Savings__c = 0 || Actual_Hours__c = 0),0, 
IF(NOT(ISPICKVAL(Request_Status__c,&quot;Completed&quot;)) &amp;&amp; Annual_Savings__c !=0 &amp;&amp; Project_Level_LOE__c !=0,
  12 / ( Annual_Savings__c / (50 * Project_Level_LOE__c )),
IF(NOT(ISPICKVAL(Request_Status__c,&quot;Completed&quot;)) &amp;&amp; (Annual_Savings__c = 0 &amp;&amp; Project_Level_LOE__c = 0),0,0
)
)
)
)

*/</formula>
    <inlineHelpText>Number of months after deployment to Production that the cost of the project is recouped through cost and/or productivity savings.</inlineHelpText>
    <label>ROI (months)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>