force-app/main/default/objects/NI_Project_Backlog__c/fields/ROI_Date__c.field-meta.xml
<CustomField>
    <fullName>ROI_Date__c</fullName>
    <description>Based on Actual LOE when the Request is Completed.  Based on Estimated LOE when Project is Deployed.  NULL if neither of these statuses are true.</description>
    <formula>/****************************UPDATED PER NICC-016642 **************************/ 
/*** If there are no annual savings, then there is no return on investment date (set to 12/31/9999) ***/
/*** If the project is &quot;Complete&quot;, add the ROI Duration to the Project&apos;s Completion Date ***/
/*** If the project is not yet complete, then leave this field blank ***/
IF( ISPICKVAL(Request_Status__c,&quot;Completed&quot;) &amp;&amp; Annual_Savings__c=0,
DATE(9999,12,31),
IF( ISPICKVAL(Request_Status__c,&quot;Completed&quot;) &amp;&amp; Total_Actual_Hours__c!=0,
Project_Completion_Date__c + (365/(Annual_Savings__c/(50*Total_Actual_Hours__c))),
Project_Completion_Date__c
)
)

/********ORIGINAL FORMULA
Project_Completion_Date__c +
IF(ISPICKVAL(Request_Status__c,&quot;Completed&quot;), 
  365/(Annual_Savings__c/(50* Actual_Hours__c)), 
  IF( ISPICKVAL(Project_Status__c,&quot;Deployed&quot;),  
    365/( Annual_Savings__c/(50*Project_Level_LOE__c)),
    NULL
  )
)
*/
/*
Project_Completion_Date__c +
IF(ISPICKVAL(Request_Status__c,&quot;Completed&quot;),
365/(Annual_Savings__c/(50* Actual_Hours__c)),
IF( ISPICKVAL(Request_Status__c,&quot;Completed&quot;),
365/( Annual_Savings__c/(50*Project_Level_LOE__c)),
NULL
)
)
*/</formula>
    <inlineHelpText>Date that the cost of the project will be recouped through cost and/or productivity savings.</inlineHelpText>
    <label>ROI Date</label>
    <type>Date</type>
</CustomField>