force-app/main/default/objects/NI_Project_Backlog__c/fields/SLT_Member__c.field-meta.xml
<CustomField>
    <fullName>SLT_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-061428</description>
    <inlineHelpText>Senior Leadership Team member for this project</inlineHelpText>
    <label>SLT Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AH_Project_Backlog1</relationshipName>
    <type>Lookup</type>
</CustomField>