force-app/main/default/objects/NI_Project_Backlog__c/fields/SLTC_Impact__c.field-meta.xml
<CustomField>
    <fullName>SLTC_Impact__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-055100</description>
    <inlineHelpText>This is a temporary field used to assist with project planning during the SLTC implementation</inlineHelpText>
    <label>SLTC Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interim Eliminate</fullName>
            </value>
            <value>
                <fullName>Interim Revise</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>