force-app/main/default/objects/NI_Project_Backlog__c/fields/Solution_Design_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Solution_Design_Approved_Date__c</fullName>
    <description>NICC-044048
The date the Solution Design was approved</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the Solution Design was approved</inlineHelpText>
    <label>Solution Design Approved Date</label>
    <type>DateTime</type>
</CustomField>