force-app/main/default/objects/NI_Project_Backlog__c/fields/Solution_Domain__c.field-meta.xml
<CustomField>
    <fullName>Solution_Domain__c</fullName>
    <inlineHelpText>*Bundles are historically TC Bundles</inlineHelpText>
    <label>Solution Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Solution_Domain</valueSetName>
    </valueSet>
</CustomField>