force-app/main/default/objects/NI_Project_Backlog__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <description>Created for Business Systems Team. NICC-030010</description>
    <inlineHelpText>Used as filter criteria in project views/reports; indicates which relative sprint includes tasks for the project.</inlineHelpText>
    <label>Sprint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Next</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>