force-app/main/default/objects/NI_Project_Backlog__c/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <label>Stakeholder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Multiple Departments</fullName>
            </value>
            <value>
                <fullName>User/Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>