force-app/main/default/objects/NI_Project_Backlog__c/fields/Stakeholder_Department__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Department__c</fullName>
    <businessOwnerUser>dmerrill@newmarketinc.com.sbfull</businessOwnerUser>
    <description>NICC-043352
Updated per NICC 043841
NICC 043999</description>
    <inlineHelpText>List all departments impacted by this change in process</inlineHelpText>
    <label>Stakeholder Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
            <value>
                <fullName>Customer Delivery</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>Enterprise Program Management</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Media Delivery</fullName>
            </value>
            <value>
                <fullName>Media Management</fullName>
            </value>
            <value>
                <fullName>Order Management</fullName>
            </value>
            <value>
                <fullName>PLCM</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Implementations</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Systems Engineering</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>