force-app/main/default/objects/NI_Project_Backlog__c/fields/Strategic_Theme__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Theme__c</fullName>
    <description>NICC-054201</description>
    <label>Strategic Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digitalize our end-to-end processes</fullName>
            </value>
            <value>
                <fullName>Extended bundling &amp; cross-selling</fullName>
            </value>
            <value>
                <fullName>Focused portfolio evolution to retain our customers</fullName>
            </value>
            <value>
                <fullName>Sunset our legacy portfolio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>