force-app/main/default/objects/NI_Project_Backlog__c/fields/Support_Hours__c.field-meta.xml
<CustomField>
    <fullName>Support_Hours__c</fullName>
    <formula>Task_Hours_Support__c +  Child_Project_Task_Hours_Support__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Support Hours For Project</inlineHelpText>
    <label>Support Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>