force-app/main/default/objects/NI_Project_Backlog__c/fields/Systems__c.field-meta.xml
<CustomField>
    <fullName>Systems__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-049720 - Promoted to Global Value Set
Internal Systems involved in CBS Project</description>
    <inlineHelpText>Select the internal systems involved in the CBS project</inlineHelpText>
    <label>Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AH_Systems</valueSetName>
    </valueSet>
</CustomField>