force-app/main/default/objects/NI_Project_Backlog__c/fields/T_shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>T_shirt_Size__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>Updated 07/31/2020 Per NICC-044411
NICC-044048

Used to size the level of work required for the project</description>
    <inlineHelpText>Youth: &lt; 40 hrs
X-Small: 40-80 hrs
Small: 80-160 hrs
Medium: 160-480 hrs
Large: 480-1060 hrs
X-Large: 1060-2080 hrs</inlineHelpText>
    <label>T-Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X-Small</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
            <value>
                <fullName>Youth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>