force-app/main/default/objects/NI_Project_Backlog__c/fields/Target_UAT_Handoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_UAT_Handoff_Date__c</fullName>
    <description>NICC-051223
The estimated date when CBS will hand-off the project to the UAT coordinator</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The estimated date when CBS will hand-off the project to the UAT coordinator</inlineHelpText>
    <label>Target UAT Handoff Date</label>
    <type>Date</type>
</CustomField>