force-app/main/default/objects/NI_Project_Backlog__c/fields/Ticket_Escalated_to_Project__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Escalated_to_Project__c</fullName>
    <businessOwnerUser>lertle@newmarketinc.com</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <description>If checked this means the NI Project Backlog record originated from a users ticket request (currently from MyServiceDesk)</description>
    <inlineHelpText>If checked this means the NI Project Backlog record originated from a users ticket request (currently from MyServiceDesk)</inlineHelpText>
    <label>Project from MyServiceDesk Ticket</label>
    <type>Checkbox</type>
</CustomField>