force-app/main/default/objects/NI_Project_Backlog__c/fields/Total_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Hours__c</fullName>
    <formula>Actual_Hours__c +  Child_Project_Actual_LOE_hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Hours For Project</inlineHelpText>
    <label>Actual Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>