force-app/main/default/objects/NI_Project_Backlog__c/fields/TShirt_Meter__c.field-meta.xml
<CustomField>
    <fullName>TShirt_Meter__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>Updated 07/31/2020 Per NICC-044411
NICC-044048

Graphical image of the T-shirt size</description>
    <formula>IF (ISPICKVAL(T_shirt_Size__c,&quot;X-Small&quot;), IMAGE(&quot;/resource/ExtraSmallShirt&quot;, &quot;X-Small&quot;),
IF (ISPICKVAL(T_shirt_Size__c,&quot;Small&quot;), IMAGE(&quot;/resource/SmallShirt&quot;, &quot;Small&quot;),
IF (ISPICKVAL(T_shirt_Size__c,&quot;Medium&quot;), IMAGE(&quot;/resource/MediumShirt&quot;, &quot;Medium&quot;),
IF (ISPICKVAL(T_shirt_Size__c,&quot;Large&quot;), IMAGE(&quot;/resource/LargeShirt&quot;, &quot;Large&quot;),
IF (ISPICKVAL(T_shirt_Size__c,&quot;X-Large&quot;), IMAGE(&quot;/resource/ExtraLargeShirt&quot;, &quot;X-Large&quot;),
IF (ISPICKVAL(T_shirt_Size__c,&quot;Youth&quot;), IMAGE(&quot;/resource/AstroShirt&quot;, &quot;AstroShirt&quot;),
&quot;&quot;
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Graphical image of the T-shirt size</inlineHelpText>
    <label>T-Shirt Meter</label>
    <type>Text</type>
</CustomField>