force-app/main/default/objects/NI_Project_Backlog__c/fields/UAT_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_Completed_Date__c</fullName>
    <description>NICC-044048
The date that UAT was completed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that UAT was completed</inlineHelpText>
    <label>UAT Completed Date</label>
    <type>Date</type>
</CustomField>