force-app/main/default/objects/NI_Project_Backlog__c/fields/Unplanned__c.field-meta.xml
<CustomField>
    <fullName>Unplanned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark checkbox checked, if  Backlog item is unplanned.</description>
    <inlineHelpText>Mark checkbox checked, if  Backlog item is unplanned.</inlineHelpText>
    <label>Unplanned</label>
    <type>Checkbox</type>
</CustomField>